[gd_scene load_steps=16 format=3 uid="uid://bgxdiwbsfjwi3"]

[ext_resource type="Script" path="res://menus/main_menu/MainMenuLeft.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bwx8jmm5u4dmc" path="res://graphics/icons/music-box-outline.svg" id="2"]
[ext_resource type="Texture2D" uid="uid://747hv6amarf4" path="res://graphics/icons/settings.svg" id="3"]
[ext_resource type="FontVariation" uid="uid://dhadcv8aq5u14" path="res://fonts/noto/NotoSans-Regular.tres" id="3_egic7"]
[ext_resource type="PackedScene" uid="uid://df57f4m3iefr8" path="res://menus/HBMenuChangeButton.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://doafidb2q4jxo" path="res://graphics/icons/exit-run.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://m0q58fhyueok" path="res://graphics/icons/tools.svg" id="6"]
[ext_resource type="Texture2D" uid="uid://d2kjl2b11qmqm" path="res://graphics/icons/earth.svg" id="7"]
[ext_resource type="Texture2D" uid="uid://b1mbegd5nhs23" path="res://graphics/Logo.png" id="8"]
[ext_resource type="Texture2D" uid="uid://cgshshdr1fqyn" path="res://graphics/icons/help-circle.svg" id="12"]
[ext_resource type="Texture2D" uid="uid://bsw2b863mfxnd" path="res://graphics/icons/discord_main.svg" id="14"]
[ext_resource type="Script" path="res://menus/main_menu/NetworkStatus.gd" id="15"]
[ext_resource type="Texture2D" uid="uid://rx4rtkhmkprb" path="res://graphics/icons/steam.svg" id="16"]
[ext_resource type="Texture2D" uid="uid://dku88ebe3yjq0" path="res://graphics/icons/download.svg" id="17"]

[sub_resource type="GDScript" id="1"]
script/source = "@tool
extends HBMenuChangecontainer

signal navigate_to_menu(menu)

func _ready():
	super._ready()
	for child in get_children():
		if child is HBMenuChangeButton:
			child.connect(\"pressed\", Callable(self, \"_on_child_pressed\").bind(child.next_menu))

func _on_child_pressed(next_menu):
	emit_signal(\"navigate_to_menu\", next_menu)

func _on_ExitButton_pressed():
	get_tree().quit()
"

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2
script = ExtResource("15")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_egic7")
text = "HeartbeatNET: Connected"
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_egic7")
text = "HeartbeatNET: Connected"
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 175)
layout_mode = 0
offset_left = 2.0
offset_top = 62.0
offset_right = 805.0
offset_bottom = 454.636
texture = ExtResource("8")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 53.0
offset_right = 488.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="TextureRect" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="StartMenu" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
theme_override_constants/separation = 10
script = SubResource("1")
orientation = 1
enable_wrap_around = true

[node name="StartButton" parent="VBoxContainer/StartMenu" instance=ExtResource("4")]
custom_minimum_size = Vector2(430, 60)
layout_mode = 2
text = "Free Play"
icon = ExtResource("2")
next_menu = "song_list"

[node name="WorkshopButton" parent="VBoxContainer/StartMenu" groups=["mponly"] instance=ExtResource("4")]
custom_minimum_size = Vector2(430, 60)
layout_mode = 2
text = "Workshop"
icon = ExtResource("16")
next_menu = "workshop_browser"

[node name="HowToPlayButton" parent="VBoxContainer/StartMenu" instance=ExtResource("4")]
custom_minimum_size = Vector2(430, 60)
layout_mode = 2
text = "How to play"
icon = ExtResource("12")
next_menu = "tutorial"

[node name="MultiplayerButton" parent="VBoxContainer/StartMenu" groups=["mponly"] instance=ExtResource("4")]
custom_minimum_size = Vector2(430, 60)
layout_mode = 2
text = "Multiplayer"
icon = ExtResource("7")
next_menu = "lobby_list"

[node name="DownloadQueueButton" parent="VBoxContainer/StartMenu" instance=ExtResource("4")]
custom_minimum_size = Vector2(430, 60)
layout_mode = 2
text = "Downloads"
icon = ExtResource("17")
next_menu = "download_queue"

[node name="DiscordButton" parent="VBoxContainer/StartMenu" groups=["demo_only"] instance=ExtResource("4")]
visible = false
custom_minimum_size = Vector2(430, 60)
layout_mode = 2
text = "Discord Server"
icon = ExtResource("14")

[node name="OptionsButton" parent="VBoxContainer/StartMenu" instance=ExtResource("4")]
custom_minimum_size = Vector2(430, 60)
layout_mode = 2
text = "Options"
icon = ExtResource("3")
next_menu = "options_menu"

[node name="ToolsButton" parent="VBoxContainer/StartMenu" groups=["nodemo"] instance=ExtResource("4")]
custom_minimum_size = Vector2(430, 60)
layout_mode = 2
text = "Tools"
icon = ExtResource("6")
next_menu = "tools_menu"

[node name="ExitButton" parent="VBoxContainer/StartMenu" instance=ExtResource("4")]
custom_minimum_size = Vector2(430, 60)
layout_mode = 2
text = "Exit"
icon = ExtResource("5")

[connection signal="focus_entered" from="." to="VBoxContainer/StartMenu" method="grab_focus"]
[connection signal="pressed" from="VBoxContainer/StartMenu/DiscordButton" to="." method="_on_discord_server_pressed"]
[connection signal="pressed" from="VBoxContainer/StartMenu/ExitButton" to="VBoxContainer/StartMenu" method="_on_ExitButton_pressed"]
